--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/charts": "^1.0.21",
     "@ant-design/icons": "^4.4.0",
+    "@inovua/reactdatagrid-community": "^4.1.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
@@ -18,6 +19,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.11",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-stripe-checkout": "^2.6.3",
